force-app/main/default/objects/Krow__Survey_Question_Response__c/Krow__Survey_Question_Response__c.object-meta.xml
<CustomObject>
    <label>Klient Survey Question Response</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Survey Question Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>