force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Passive__c.field-meta.xml
<CustomField>
    <fullName>Krow__Passive__c</fullName>
    <formula>IF(AND(Krow__Promoter__c &lt; 1, Krow__Detractor__c &lt; 1), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>