force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Picklist_Response__c.field-meta.xml
<CustomField>
    <fullName>Krow__Picklist_Response__c</fullName>
    <label>Picklist Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>