force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Promoter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Promoter__c</fullName>
    <formula>IF(ISPICKVAL(Krow__Survey_Question__r.Krow__Question_Type__c, &apos;NPS&apos;), IF(Krow__Rating__c &gt; 8, 1, 0),IF(ISPICKVAL(Krow__Survey_Question__r.Krow__Question_Type__c, &apos;CSAT&apos;), IF(Krow__Rating__c &gt; 3, 1, 0), 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>