force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Rating__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rating__c</fullName>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>