force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_Response__c</fullName>
    <label>Survey Response</label>
    <referenceTo>Krow__Survey_Response__c</referenceTo>
    <relationshipLabel>Survey Question Responses</relationshipLabel>
    <relationshipName>Survey_Question_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>