force-app/main/default/objects/Krow__Survey_Question_Response__c/fields/Krow__Text_Response__c.field-meta.xml
<CustomField>
    <fullName>Krow__Text_Response__c</fullName>
    <label>Text Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>